--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    <script src="clase27.js"></script>
+    <script src="comp4.js"></script>
   </body>
 </html>
